[package]
authors = ["Cherry Ramatis <cherry.ramatis@icloud.com>"]
categories = ["command-line-utilities"]
description = "A command-line utility for bringing Jira and Github together"
homepage = "https://github.com/cherryramatisdev/jirarust"
license = "MIT/Apache-2.0"
name = "jirarust"
repository = "https://github.com/cherryramatisdev/jirarust"
version = "0.3.5"
edition = '2021'

[dependencies]
ansi-hex-color = "0.1.1"
atty = "0.2.14"
clap = { version = "4.1.8", features = ["derive"] }
colors-transform = "0.2.11"
dialoguer = "0.10.3"
http-auth-basic = "0.3.3"
minreq = { version = "2.6.0", features = ["punycode", "https", "json-using-serde"] }
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockall = "0.11.3"
thiserror = "1.0.40"
